--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@react-navigation/native": "^6.0.13",
         "@react-navigation/native-stack": "^6.9.1",
+        "@types/react-native-video": "^5.0.14",
         "expo": "^44.0.0",
         "expo-av": "~10.2.0",
         "expo-camera": "~12.3.0",
