--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "Fname",
         "Ionicons",
-        "Pressable"
+        "Lname",
+        "Pressable",
+        "setl"
     ]
 }
