--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
         "@react-navigation/native": "^6.0.13",
         "@react-navigation/native-stack": "^6.9.1",
         "@types/react-native-video": "^5.0.14",
+        "aws-sdk": "^2.1277.0",
         "expo": "^44.0.0",
         "expo-av": "~10.2.0",
-        "expo-camera": "~12.3.0",
+        "expo-camera": "~12.1.2",
         "expo-face-detector": "~11.1.3",
         "expo-status-bar": "~1.2.0",
         "loadash": "^1.0.0",
