--- a/package.json
+++ b/package.json
@@ -1,59 +1,63 @@
 {
-    "name": "nb-ts",
-    "version": "1.0.0",
-    "main": "node_modules/expo/AppEntry.js",
-    "keywords": [
-        "react",
-        "expo",
-        "template",
-        "typescript",
-        "nativebase"
-    ],
-    "license": "MIT",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "eject": "expo eject"
-    },
-    "dependencies": {
-        "@react-navigation/native": "^6.0.13",
-        "@react-navigation/native-stack": "^6.9.1",
-        "@types/react-native-video": "^5.0.14",
-        "aws-sdk": "^2.1277.0",
-        "expo": "^44.0.0",
-        "expo-av": "~10.2.0",
-        "expo-camera": "~12.1.2",
-        "expo-face-detector": "~11.1.3",
-        "expo-status-bar": "~1.2.0",
-        "loadash": "^1.0.0",
-        "lodash": "^4.17.21",
-        "native-base": "3.4.0",
-        "react": "18.1.0",
-        "react-dom": "17.0.1",
-        "react-native": "0.70.6",
-        "react-native-gesture-handler": "~2.1.0",
-        "react-native-reanimated": "~2.3.1",
-        "react-native-safe-area-context": "3.3.2",
-        "react-native-screens": "~3.10.1",
-        "react-native-svg": "12.1.1",
-        "react-native-video-player": "^0.14.0",
-        "react-native-web": "0.17.1",
-        "react-navigation": "^4.4.4",
-        "react-navigation-stack": "^2.10.4",
-        "valtio": "^1.7.5"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.9",
-        "@types/react": "~17.0.21",
-        "@types/react-native": "~0.64.12",
-        "typescript": "~4.3.5"
-    },
-    "bugs": {
-        "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
-    },
-    "homepage": "https://github.com/GeekyAnts/nativebase-templates#readme",
-    "author": "Aditya Jamuar",
-    "private": true
+  "name": "nb-ts",
+  "version": "1.0.0",
+  "keywords": [
+    "react",
+    "expo",
+    "template",
+    "typescript",
+    "nativebase"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
+  },
+  "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "@types/react-native-video": "^5.0.14",
+    "aws-sdk": "^2.1277.0",
+    "expo": "^46.0.0",
+    "expo-av": "~10.2.0",
+    "expo-face-detector": "~11.1.3",
+    "expo-status-bar": "~1.2.0",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
+    "native-base": "3.4.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
+    "react-native-video-player": "^0.14.0",
+    "react-native-web": "0.18.7",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "valtio": "^1.7.5",
+    "expo-splash-screen": "~0.16.2",
+    "expo-updates": "~0.14.7",
+    "react-native-hole-view": "^2.1.2",
+    "react-native-plotly": "^6.0.0",
+    "react-native-vision-camera": "^2.14.1",
+    "react-native-webview": "11.23.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "typescript": "~4.3.5"
+  },
+  "bugs": {
+    "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
+  },
+  "homepage": "https://github.com/GeekyAnts/nativebase-templates#readme",
+  "author": "Aditya Jamuar",
+  "private": true
 }
