--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-dom": "18.0.0",
         "react-native": "0.69.6",
         "react-native-gesture-handler": "~2.5.0",
+        "react-native-get-random-values": "^1.8.0",
         "react-native-reanimated": "~2.9.1",
         "react-native-safe-area-context": "4.3.1",
         "react-native-screens": "~3.15.0",
@@ -42,6 +43,7 @@
         "react-native-web": "~0.18.7",
         "react-navigation": "^4.4.4",
         "react-navigation-stack": "^2.10.4",
+        "uuid": "^9.0.0",
         "valtio": "^1.7.5"
     },
     "devDependencies": {
