--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react": "18.0.0",
         "react-dom": "18.0.0",
         "react-native": "0.69.6",
+        "react-native-chart-kit": "^6.12.0",
         "react-native-gesture-handler": "~2.5.0",
         "react-native-get-random-values": "^1.8.0",
         "react-native-reanimated": "~2.9.1",
